align top part of the page & fix row items styles

--- a/src/modules/Layout/Row/Row.scss
+++ b/src/modules/Layout/Row/Row.scss
@@ -4,10 +4,6 @@
     flex-direction: row;
     justify-content: space-between;
 
-    &__item {
-        width: 100%;
-    }
-
     &--centered {
         text-align: center;
     }
